tools/crates/vendor/toml_edit/tests/fixtures/invalid/spec/string-7-0.stderr
TOML parse error at line 3, column 48
  |
3 | apos15 = '''Here are fifteen apostrophes: ''''''''''''''''''  # INVALID
  |                                                ^
expected newline, `#`
